--- a/popup.html
+++ b/popup.html
@@ -1,15 +1,64 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
+    <meta charset="UTF-8" />
+    <title>Music Identifier</title>
     <style>
-      body { font-family: Arial, sans-serif; width: 200px; padding: 10px; }
-      button { width: 100%; padding: 10px; }
-      #song-info { margin-top: 10px; font-weight: bold; }
+      body {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        background: #f4f6f9;
+        width: 380px; 
+        height: 300px;
+        margin: 0;
+        padding: 20px;
+        box-sizing: border-box;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+      }
+
+      h1 {
+        font-size: 20px;
+        color: #333;
+        margin-bottom: 20px;
+      }
+
+      button {
+        background: #4a90e2;
+        color: white;
+        border: none;
+        border-radius: 8px;
+        padding: 12px 20px;
+        font-size: 16px;
+        cursor: pointer;
+        transition: background 0.3s ease;
+        width: 100%;
+        max-width: 300px;
+      }
+
+      button:hover {
+        background: #357ABD;
+      }
+
+      #song-info {
+        margin-top: 20px;
+        padding: 12px;
+        background: #fff;
+        border-radius: 8px;
+        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+        width: 100%;
+        max-width: 300px;
+        text-align: center;
+        font-size: 14px;
+        color: #444;
+      }
     </style>
   </head>
   <body>
+    <h1>🎵 Music Identifier</h1>
     <button id="start-btn">Start Music Detection</button>
-    <div id="song-info">Press button to detect</div>
+    <div id="song-info">Press the button to detect music</div>
 
     <script src="popup.js"></script>
   </body>
