--- a/popup.html
+++ b/popup.html
@@ -1,65 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Music Identifier</title>
-    <style>
-      body {
-        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        background: #f4f6f9;
-        width: 380px; 
-        height: 300px;
-        margin: 0;
-        padding: 20px;
-        box-sizing: border-box;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-      }
+<head>
+  <meta charset="UTF-8" />
+  <title>Music Identifier</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+  <style>
+    * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+    }
 
-      h1 {
-        font-size: 20px;
-        color: #333;
-        margin-bottom: 20px;
-      }
+    html, body {
+      width: 100%;
+      height: 100%;
+      font-family: 'Poppins', sans-serif;
+      background: linear-gradient(135deg, #6a11cb 0%, #2575fc 100%);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      color: #fff;
+    }
 
-      button {
-        background: #4a90e2;
-        color: white;
-        border: none;
-        border-radius: 8px;
-        padding: 12px 20px;
-        font-size: 16px;
-        cursor: pointer;
-        transition: background 0.3s ease;
-        width: 100%;
-        max-width: 300px;
-      }
+    .container {
+      background: rgba(255, 255, 255, 0.1);
+      backdrop-filter: blur(12px);
+      border-radius: 16px;
+      padding: 40px;
+      width: 90%;
+      max-width: 500px;
+      text-align: center;
+      box-shadow: 0 8px 24px rgba(0, 0, 0, 0.2);
+      transition: all 0.3s ease-in-out;
+    }
 
-      button:hover {
-        background: #357ABD;
-      }
+    h1 {
+      font-size: 28px;
+      margin-bottom: 20px;
+    }
 
-      #song-info {
-        margin-top: 20px;
-        padding: 12px;
-        background: #fff;
-        border-radius: 8px;
-        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-        width: 100%;
-        max-width: 300px;
-        text-align: center;
-        font-size: 14px;
-        color: #444;
-      }
-    </style>
-  </head>
-  <body>
+    button {
+      background: #ffffff;
+      color: #2575fc;
+      border: none;
+      border-radius: 12px;
+      padding: 14px 24px;
+      font-size: 16px;
+      font-weight: 600;
+      cursor: pointer;
+      margin-top: 20px;
+      transition: all 0.3s ease;
+    }
+
+    button:hover {
+      background: #f0f0f0;
+      transform: translateY(-2px);
+    }
+
+    #song-info {
+      margin-top: 30px;
+      background: rgba(255, 255, 255, 0.2);
+      padding: 16px;
+      border-radius: 12px;
+      font-size: 16px;
+      color: #fdfdfd;
+    }
+  </style>
+</head>
+<body>
+  <div class="container">
     <h1>🎵 Music Identifier</h1>
     <button id="start-btn">Start Music Detection</button>
     <div id="song-info">Press the button to detect music</div>
+  </div>
 
-    <script src="popup.js"></script>
-  </body>
+  <script src="popup.js"></script>
+</body>
 </html>
